# price-tracker

./: .dockerignore  .gitignore  .gitmodules  .ocamlinit  Dockerfile  Dockerfile.arm32v7  Dockerfile.arm64v8  Makefile  README.md  price-tracker-exe.opam  price-tracker-lib.opam  pricetracker.db
src/: actions_queue.ml  bot.ml  commands.ml  configuration.ml  database.ml  db.ml  jbuild  price.ml  watcher.ml
src/exe/: jbuild  main.ml  url.txt
src/parsers/: alientech.ml  amazonEspana.ml  aquario.ml  banggood.ml  baseCom.ml  bestGames.ml  bestgames.ml  elcorteingles.ml  fnac.ml  gamingReplay.ml  gamingreplay.ml  gearBest.ml  globaldata.ml  mediamarkt.ml  novoatalho.ml  pccomponentes.ml  pcdiga.ml  price.ml  toyJapan.ml  toyjapan.ml  utils.ml  worten.ml
